# api/__init__.py
@@ -3,12 +3,13 @@ from os import environ
 from dotenv import load_dotenv
 from pandas import read_csv, read_sql
 from flask_cors import CORS
-from flask import Flask
+from flask import Flask, redirect
 from .config import config as app_config
 from .swaggerConfig import config as swaggerConfig
 from .extentions import db, ma
 from .constant import FISH_CSV_DIR
 from flask_swagger_ui import get_swaggerui_blueprint
+
 
 def create_app():
 
@@ -19,20 +20,15 @@ def create_app():
     app = Flask(app_config[APPLICATION_ENV].APP_NAME)
     app.config.from_object(app_config[APPLICATION_ENV])
 
-
-
-	# Plugins initialization goes here
+    # Plugins initialization goes here
     db.init_app(app)
     ma.init_app(app)
 
-
     SWAGGERUI_BLUEPRINT = get_swaggerui_blueprint(
-    swaggerConfig.SWAGGER_URL,
-    swaggerConfig.API_URL,
-    config={
-        'app_name': "Fishes API"
-    }
-)
+        swaggerConfig.SWAGGER_URL,
+        swaggerConfig.API_URL,
+        config={"app_name": "Fishes API"},
+    )
     CORS(app, resources={r"/api/*": {"origins": "*"}})
 
     # --------------------------------
@@ -45,16 +41,13 @@ def create_app():
     # Imports Schemas
     from api.schemas import FishSchema
 
-
     # Import the module / component using their blueprints
     from api.routes import API_ROUTES
 
     # Register Blueprints
 
-
     for api_blueprint in API_ROUTES:
         app.register_blueprint(api_blueprint, url_prefix="/api/")
-
 
     # Register Swagger Blueprint
     app.register_blueprint(SWAGGERUI_BLUEPRINT, url_prefix="/docs/")
@@ -65,23 +58,21 @@ def create_app():
         # Check if the existing table contain data, if not then initialize with csv insert
         s = db.session()
         if len(s.query(Fish.Fish).all()) == 0:
-            print('No data in the table detected.')
-            print('Initialising the table in database.')
+            print("No data in the table detected.")
+            print("Initialising the table in database.")
             engine = s.get_bind()
             df = read_csv(FISH_CSV_DIR)
-            df= df.rename(columns=str.lower)
-            df["length"] = df[["length1", "length2", "length3"]].mean(axis=1)
-            df.drop(["length1","length2","length3"], axis=1, inplace=True)
-            df.to_sql('fishes',
-                    con=engine,
-                    if_exists='append',
-                    chunksize=1000,
-                    index=False)
+            df = df.rename(columns=str.lower)
+            df = df.rename(columns={"length1": "vertical_length", "length2": "horizontal_length", "length3": "diagonal_length"})
+            df.to_sql(
+                "fishes", con=engine, if_exists="append", chunksize=1000, index=False
+            )
 
+    @app.route("/")
+    def toDocs():
+        return redirect("/docs/")
 
     return app
-
-
 
 
 def get_environment():
