# api/routes/prediction_bp.py
@@ -1,9 +1,9 @@
 from flask import Blueprint
-from api.controllers.PredictionController import view
+from api.controllers.PredictionController import show
 
 
 prediction_bp  = Blueprint('prediction', __name__)
 
 
 # CRUD routes
-prediction_bp.route('/predict', methods=['Post'])(view)
+prediction_bp.route('/predict', methods=['Post'])(show)
