# api/schemas/FishSchema.py
@@ -8,7 +8,9 @@ class FishSchema(ma.SQLAlchemyAutoSchema):
     id = ma.auto_field()
     species= ma.auto_field()
     weight = ma.auto_field()
-    length = ma.auto_field()
+    horizontal_length = ma.auto_field()
+    vertical_length = ma.auto_field()
+    diagonal_length = ma.auto_field()
     height = ma.auto_field()
     width = ma.auto_field()
 
